Renamed Uttaks to Uttak; Renamed RecurrenceRule to GjentakelsesRegel
