# src/main/resources/calendar_api_spec.yml
@@ -2,11 +2,11 @@ openapi: 3.0.0
 # Added by API Auto Mocking Plugin
 servers:
   - description: SwaggerHub API Auto Mocking
-    url: https://virtserver.swaggerhub.com/oko8/Uttaks/1.0.0
+    url: https://virtserver.swaggerhub.com/oko8/Uttak/1.0.0
   - description: Actual API
     url: https://tcuk58u5ge.execute-api.eu-central-1.amazonaws.com/staging/calendar/
 info:
-  description: API documentation for the OKO uttaks endpoint
+  description: API documentation for the OKO uttak endpoint
   version: "1.0.0"
   title: OKO Calendar
   contact:
@@ -28,7 +28,7 @@ paths:
       responses:
         '200':
           description: Service is up
-  /uttaks/{uttak_id}:
+  /uttak/{uttak_id}:
     get:
       tags:
         - everyone
@@ -53,25 +53,25 @@ paths:
         '404':
           description: not found
 
-  /uttaks/:
+  /uttak/:
     get:
       tags:
         - everyone
-      summary: fetches uttaks
-      operationId: getUttaks
+      summary: fetches uttak
+      operationId: getUttak
       description: |
-        Calls without parameters returns all uttaks. Use parameters to narrow
+        Calls without parameters returns all uttak. Use parameters to narrow
         down search results
       parameters:
         - in: query
           name: stasjonId
-          description: pass an optional stasjon id for uttaks
+          description: pass an optional stasjon id for uttak
           required: false
           schema:
             type: integer
         - in: query
           name: partnerId
-          description: pass an optional partner id for uttaks
+          description: pass an optional partner id for uttak
           required: false
           schema:
             type: integer
@@ -91,7 +91,7 @@ paths:
         - everyone
       summary: Adds a new uttak
       operationId: addUttak
-      description: Adds a new uttak. Can be both recurring or single uttaks.
+      description: Adds a new uttak. Can be both recurring or single uttak.
       responses:
         '201':
           description: Uttak created
@@ -102,7 +102,7 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/PostUttakForm'
-        description: Uttak to add. Omit recurrenceRule if singular uttak. The recurrence rule has to specifiy EITHER until or count. The first day of the days array in the recurrence rule has to match the start date of the uttak.
+        description: Uttak to add. Omit gjentakelsesRegel if singular uttak. The recurrence rule has to specifiy EITHER until or count. The first day of the days array in the recurrence rule has to match the start date of the uttak.
     patch:
       tags:
         - everyone
@@ -125,10 +125,10 @@ paths:
     delete:
       tags:
         - everyone
-      summary: Wipes uttaks from database
-      operationId: deleteUttaks
+      summary: Wipes uttak from database
+      operationId: deleteUttak
       description: |
-        Deletes all inserted uttaks and their corresponding recurrence rules
+        Deletes all inserted uttak and their corresponding recurrence rules
         (if any). Must pass in either uttakId or recurrence-ruleId.
       parameters:
         - in: query
@@ -139,9 +139,9 @@ paths:
             format: int64
             example: 10
         - in: query
-          name: recurrenceRuleId
+          name: gjentakelsesRegelId
           description: |
-            Deletes all uttaks that references the specified recurrence
+            Deletes all uttak that references the specified recurrence
             rule
           schema:
             type: integer
@@ -149,14 +149,14 @@ paths:
             example: 1
         - in: query
           name: fromDate
-          description: Delete uttaks from specified date
+          description: Delete uttak from specified date
           schema:
             type: string
             format: date-time
             example: "2020-07-10T12:17:39"
         - in: query
           name: toDate
-          description: Delete uttaks up to and including specified date
+          description: Delete uttak up to and including specified date
           schema:
             type: string
             format: date-time
@@ -165,9 +165,9 @@ paths:
         '200':
           description: Deleted successfully
         '404':
-          description: No uttaks found
+          description: No uttak found
         '500':
-          description: Failed to delete uttaks
+          description: Failed to delete uttak
 
 components:
   schemas:
@@ -190,8 +190,8 @@ components:
           type: integer
           format: int64
           example: 3
-        recurrenceRule:
-          $ref: '#/components/schemas/PostRecurrenceRule'
+        gjentakelsesRegel:
+          $ref: '#/components/schemas/PostGjentakelsesRegel'
 
     Uttak:
       type: object
@@ -211,8 +211,8 @@ components:
           $ref: '#/components/schemas/Stasjon'
         partner:
           $ref: '#/components/schemas/Partner'
-        recurrenceRule:
-          $ref: '#/components/schemas/RecurrenceRule'
+        gjentakelsesRegel:
+          $ref: '#/components/schemas/GjentakelsesRegel'
 
     UpdateUttakForm:
       type: object
@@ -251,7 +251,7 @@ components:
           type: string
           example: "Maritastiftelsen"
 
-    PostRecurrenceRule:
+    PostGjentakelsesRegel:
       type: object
       properties:
         id:
@@ -260,9 +260,9 @@ components:
           example: 1
           readOnly: true
       additionalProperties:
-        $ref: '#/components/schemas/RecurrenceRule'
+        $ref: '#/components/schemas/GjentakelsesRegel'
 
-    RecurrenceRule:
+    GjentakelsesRegel:
       type: object
       properties:
         until:
